# akaflieg-glider-tracker

./: Cargo.toml  captain-definition  docker-compose-deploy.yaml  docker-compose.yaml  influx  scraper.DOCKERFILE
.fleet/: run.json
akaflieg-ogn-aprs-scraper/: Cargo.toml
akaflieg-ogn-aprs-scraper/.fleet/: run.json
akaflieg-ogn-aprs-scraper/src/: influx.rs  influx_logger.rs  main.rs  util.rs
ogn-aprs-parser/: Cargo.toml
ogn-aprs-parser/.fleet/: run.json
ogn-aprs-parser/src/: lib.rs  model.rs  ogn.rs  parser.rs
ogn-aprs-parser/src/model/: ogn_object_position.rs  ogn_object_velocity.rs  ogn_status_message.rs
ogn-aprs-parser/src/ogn/: aprs_message_types.rs  ogn_address_type.rs  ogn_aircraft_types.rs  ogn_flags.rs  utils.rs
ogn-aprs-parser/src/parser/: aprs.rs  extensions.rs  parse.rs  position.rs  time.rs  util.rs
ogn-aprs-parser/src/parser/extensions/: aircraft_id.rs  altitude_rate.rs  bit_errors.rs  frequency_offset.rs  gps_resolution.rs  position_precision.rs  reception.rs  rotation_rate.rs
