[package]
name = "akaflieg-ogn-aprs-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = "0.3.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "*"
async-stream = "*"
log = { version = "*", features = ["std"] }
dotenv = "*"